[gd_scene load_steps=18 format=2]

[ext_resource path="res://script/main_screen.gd" type="Script" id=1]
[ext_resource path="res://custom_style/button_theme.tres" type="Theme" id=2]
[ext_resource path="res://custom_style/negative_button_theme.tres" type="Theme" id=3]
[ext_resource path="res://font/Silver.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://font/ingame_menu_button_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://script/main_menu_button.gd" type="Script" id=8]
[ext_resource path="res://font/gyunggicheonnyunjemok_Bold.ttf" type="DynamicFontData" id=10]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0.576471, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
anti_aliasing = false

[sub_resource type="Animation" id=2]
resource_name = "loop 2"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.576471, 1, 1 ), Color( 0.937255, 0.972549, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_styles/panel:expand_margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:custom_styles/panel:expand_margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 30.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:custom_styles/panel:expand_margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 30.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:custom_styles/panel:expand_margin_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 30.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:custom_styles/panel:border_width_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:custom_styles/panel:border_width_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:custom_styles/panel:border_width_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:custom_styles/panel:border_width_bottom")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "reset"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.576471, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_styles/panel:expand_margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:custom_styles/panel:expand_margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:custom_styles/panel:expand_margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:custom_styles/panel:expand_margin_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:custom_styles/panel:border_width_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:custom_styles/panel:border_width_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:custom_styles/panel:border_width_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:custom_styles/panel:border_width_bottom")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.468628, 0.77451, 1, 0.5 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
expand_margin_left = 17.0
expand_margin_right = 17.0
expand_margin_top = 17.0
expand_margin_bottom = 17.0
anti_aliasing = false

[sub_resource type="Animation" id=5]
resource_name = "loop 2"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.576471, 1, 1 ), Color( 0.937255, 0.972549, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_styles/panel:expand_margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:custom_styles/panel:expand_margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 30.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:custom_styles/panel:expand_margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 30.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:custom_styles/panel:expand_margin_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 30.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:custom_styles/panel:border_width_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:custom_styles/panel:border_width_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:custom_styles/panel:border_width_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:custom_styles/panel:border_width_bottom")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "reset"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:custom_styles/panel:border_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0.576471, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:custom_styles/panel:expand_margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:custom_styles/panel:expand_margin_right")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:custom_styles/panel:expand_margin_top")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:custom_styles/panel:expand_margin_bottom")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:custom_styles/panel:border_width_left")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:custom_styles/panel:border_width_top")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:custom_styles/panel:border_width_right")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath(".:custom_styles/panel:border_width_bottom")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 10, 0 ]
}

[sub_resource type="DynamicFont" id=7]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=9]
size = 34
extra_spacing_bottom = -15
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 10 )

[node name="main_screen" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backgrounds" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="Control/backgrounds"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.839216, 0.105882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="letter1" type="ColorRect" parent="Control/backgrounds"]
anchor_right = 1.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="letter2" type="ColorRect" parent="Control/backgrounds"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
rect_min_size = Vector2( 0, 100 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_menus" type="HBoxContainer" parent="Control/Control"]
margin_left = 480.0
margin_top = 220.0
margin_right = 1770.0
margin_bottom = 520.0
rect_min_size = Vector2( 630, 300 )
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_start" type="Button" parent="Control/Control/main_menus"]
margin_right = 300.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "게임하기"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
caption = "게임을 고릅니다."

[node name="collect" type="Button" parent="Control/Control/main_menus"]
margin_left = 330.0
margin_right = 630.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "준비중입니다."
script = ExtResource( 8 )
caption = "현재 준비중인 기능입니다."

[node name="option" type="Button" parent="Control/Control/main_menus"]
margin_left = 660.0
margin_right = 960.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "환경설정"
script = ExtResource( 8 )
caption = "환경설정을 합니다."

[node name="game_end" type="Button" parent="Control/Control/main_menus"]
margin_left = 990.0
margin_right = 1290.0
margin_bottom = 300.0
rect_min_size = Vector2( 300, 300 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
disabled = true
text = "끝내기"
script = ExtResource( 8 )
caption = "게임을 종료합니다."

[node name="menus_tween" type="Tween" parent="Control/Control/main_menus"]

[node name="menu_cursor" type="Panel" parent="Control/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -140.0
margin_right = 140.0
margin_bottom = 160.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Control/menu_cursor"]
autoplay = "loop"
anims/loop = SubResource( 2 )
anims/reset = SubResource( 3 )

[node name="menu_cursor2" type="Panel" parent="Control/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -140.0
margin_right = 140.0
margin_bottom = 160.0
mouse_filter = 2
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Control/menu_cursor2"]
autoplay = "loop"
anims/loop = SubResource( 5 )
anims/reset = SubResource( 6 )

[node name="Label" type="Label" parent="Control/Control"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -202.0
margin_top = 20.0
margin_right = 202.0
margin_bottom = 132.0
custom_fonts/font = SubResource( 7 )
text = "공튀기기 게임"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_name" type="Control" parent="Control/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -600.0
margin_top = -240.0
margin_right = -320.0
margin_bottom = -190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Control/menu_name"]
margin_top = -12.1456
margin_right = 242.0
margin_bottom = 47.8544
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "메뉴이름"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="Control/Control/menu_name"]
scale = Vector2( 1.5625, 1.5 )
points = PoolVector2Array( 0, 33.3333, 179.2, 33.3333 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="menu_caption" type="Label" parent="Control/Control"]
margin_left = 370.0
margin_top = 530.0
margin_right = 900.0
margin_bottom = 608.0
rect_min_size = Vector2( 530, 78 )
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "메뉴에 대한 간략한 설명이 표시되는곳입니다..........."
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="screen_tween" type="Tween" parent="Control/Control"]

[node name="game_end_confirm" type="Popup" parent="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control/game_end_confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/game_end_confirm"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -96.0752
margin_right = 204.0
margin_bottom = -61.0752
custom_fonts/font = SubResource( 10 )
text = "정말로 게임을 종료 하시겠습니까?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/game_end_confirm"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -35.0
margin_right = 160.0
margin_bottom = 35.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_end_yes" type="Button" parent="Control/game_end_confirm/HBoxContainer"]
margin_right = 150.0
margin_bottom = 70.0
rect_min_size = Vector2( 150, 70 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 5 )
text = "예"
script = ExtResource( 8 )

[node name="game_end_no" type="Button" parent="Control/game_end_confirm/HBoxContainer"]
margin_left = 170.0
margin_right = 320.0
margin_bottom = 70.0
rect_min_size = Vector2( 150, 70 )
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
text = "아니오"
script = ExtResource( 8 )

[node name="game_end_timer" type="Timer" parent="Control/game_end_confirm"]
[connection signal="button_event" from="Control/Control/main_menus/game_start" to="." method="button_event"]
[connection signal="button_up" from="Control/Control/main_menus/game_start" to="Control/Control/main_menus/game_start" method="button_up"]
[connection signal="button_event" from="Control/Control/main_menus/collect" to="." method="button_event"]
[connection signal="button_up" from="Control/Control/main_menus/collect" to="Control/Control/main_menus/collect" method="button_up"]
[connection signal="button_event" from="Control/Control/main_menus/option" to="." method="button_event"]
[connection signal="button_up" from="Control/Control/main_menus/option" to="Control/Control/main_menus/option" method="button_up"]
[connection signal="button_event" from="Control/Control/main_menus/game_end" to="." method="button_event"]
[connection signal="button_up" from="Control/Control/main_menus/game_end" to="Control/Control/main_menus/game_end" method="button_up"]
[connection signal="button_event" from="Control/game_end_confirm/HBoxContainer/game_end_yes" to="." method="button_event"]
[connection signal="button_up" from="Control/game_end_confirm/HBoxContainer/game_end_yes" to="Control/game_end_confirm/HBoxContainer/game_end_yes" method="button_up"]
[connection signal="button_event" from="Control/game_end_confirm/HBoxContainer/game_end_no" to="." method="button_event"]
[connection signal="button_up" from="Control/game_end_confirm/HBoxContainer/game_end_no" to="." method="button_up"]
[connection signal="timeout" from="Control/game_end_confirm/game_end_timer" to="." method="game_end_timeout"]
